--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ciorent",
-  "version": "0.0.10",
-  "description": "A low-overhead, lightweight concurrency library",
+  "version": "0.0.11",
+  "description": "A lightweight, low-overhead concurrency library",
   "homepage": "https://ciorent.netlify.app",
   "repository": {
     "type": "github",
@@ -10,7 +10,8 @@
   "keywords": [
     "low-overhead",
     "lightweight",
-    "concurrency"
+    "concurrency",
+    "cross-runtime"
   ],
   "license": "MIT",
   "type": "module",
@@ -22,7 +23,7 @@
     "build:publish": "bun build:test && bun task report-size && bun task publish",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "docs": "typedoc ./src/** --entryPointStrategy Expand --plugin typedoc-material-theme --skipErrorChecking --readme ./lib/README.md"
+    "docs": "typedoc"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "latest",
@@ -35,6 +36,7 @@
     "tsx": "latest",
     "typedoc": "^0.27.9",
     "typedoc-material-theme": "^1.3.0",
+    "typedoc-plugin-inline-sources": "^1.2.1",
     "typescript": "latest",
     "typescript-eslint": "latest"
   }
