--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     // Bundler mode
-    "moduleResolution": "nodenext",
+    "moduleResolution": "Bundler",
     "verbatimModuleSyntax": true,
     // Best practices
     "strict": true,
