--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mitata": "^1.0.34",
     "terser": "^5.39.0",
     "tsx": "^4.19.3",
+    "typedoc": "^0.28.1",
     "typescript": "^5.8.2"
   },
   "trustedDependencies": [
