--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciorent",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "A lightweight, low-overhead concurrency library",
   "homepage": "https://ciorent.netlify.app",
   "repository": {
@@ -20,17 +20,18 @@
   "scripts": {
     "task": "bun scripts/task.ts",
     "fmt": "biome format ./src",
+    "docs": "typedoc",
     "build:test": "bun task build && bun test",
-    "build:publish": "bun task build && bun task report-size && bun task publish"
+    "build:publish": "bun task build && bun docs && bun task report-size && bun task publish"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "^1.2.8",
-    "ciorent": "^0.0.17",
     "mitata": "^1.0.34",
     "terser": "^5.39.0",
     "tsx": "^4.19.3",
     "typedoc": "^0.28.1",
+    "typedoc-material-theme": "^1.3.0",
     "typescript": "^5.8.2"
   },
   "trustedDependencies": [
