--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciorent",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A lightweight, low-overhead concurrency library",
   "homepage": "https://ciorent.netlify.app",
   "repository": {
@@ -20,9 +20,9 @@
   "scripts": {
     "task": "bun scripts/task.ts",
     "fmt": "biome format ./src",
-    "docs": "typedoc",
+    "build:docs": "bun task build && bun x typedoc",
     "build:test": "bun task build && bun test",
-    "build:publish": "bun task build && bun docs && bun task report-size && bun task publish"
+    "build:publish": "bun build:docs && bun task report-size && bun task publish"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
