--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,7 @@
     "enabled": true
   },
   "files": {
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*", "./examples/**/*"]
   },
   "javascript": {
     "formatter": {
