--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "oxc-minify": "^0.64.0",
     "@types/bun": "^1.2.8",
     "mitata": "^1.0.34",
-    "terser": "^5.39.0",
     "tsx": "^4.19.3",
     "typedoc": "^0.28.2",
     "typedoc-material-theme": "^1.4.0",
