--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ciorent",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "description": "A lightweight, low-overhead concurrency library",
   "homepage": "https://ciorent.netlify.app",
   "repository": {
-    "type": "github",
-    "url": "https://github.com/re-utils/ciorent"
+    "type": "git",
+    "url": "git+https://github.com/re-utils/ciorent.git"
   },
   "keywords": [
     "low-overhead",
@@ -26,12 +26,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/bun": "^1.2.10",
+    "@types/bun": "^1.2.17",
     "mitata": "^1.0.34",
     "oxc-minify": "^0.64.0",
     "oxc-transform": "^0.65.0",
-    "tsx": "^4.19.3",
-    "typedoc": "^0.28.2",
+    "tsx": "^4.20.3",
+    "typedoc": "^0.28.5",
     "typedoc-material-theme": "^1.4.0",
     "typescript": "^5.8.3"
   },
