--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ciorent",
-  "version": "0.9.1",
+  "version": "0.10.1",
   "description": "A lightweight, low-overhead concurrency library",
+  "homepage": "https://re-utils.pages.dev/concurrency",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/re-utils/ciorent.git"
