--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "task": "bun scripts/task.ts",
     "fmt": "biome format .",
     "build:test": "bun task build && bun test",
-    "build:publish": "bun build:test && bun task report-size && bun task publish"
+    "build:publish": "bun task build && bun task report-size && bun task publish"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
