--- a/bench/tsconfig.json
+++ b/bench/tsconfig.json
@@ -1,23 +1,3 @@
 {
-  "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    // Bundler mode
-    "moduleResolution": "Bundler",
-    "verbatimModuleSyntax": true,
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
-    // Paths
-    "paths": {
-      "ciorent": ["../src/index.ts"]
-    }
-  }
+  "extends": "../scripts/tsconfig.json"
 }
