--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "scripts": {
     "task": "bun scripts/task.ts",
     "fmt": "biome format .",
+    "lint": "biome check",
     "build:test": "bun task build && bun test",
     "build:publish": "bun task build && bun task report-size && bun task publish"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/bun": "^1.2.17",
+    "@biomejs/biome": "^2.1.3",
+    "@types/bun": "^1.2.19",
     "mitata": "^1.0.34",
     "oxc-minify": "^0.64.0",
     "oxc-transform": "^0.65.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2",
+    "jiti": "^2.5.1"
   },
   "trustedDependencies": [
     "@biomejs/biome"
