--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "oxc-minify": "^0.64.0",
     "oxc-transform": "^0.65.0",
     "typescript": "^5.9.2",
-    "jiti": "^2.5.1"
+    "jiti": "^2.5.1",
+    "ciorent": "./lib"
   },
   "trustedDependencies": [
     "@biomejs/biome"
