--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     // Enable latest features
     "lib": [
       "ESNext.AsyncIterable",
+      "ES2015.Iterable",
       "ESNext",
       "DOM",
       "DOM.Iterable",
