--- a/bench/package.json
+++ b/bench/package.json
@@ -1,11 +1,3 @@
 {
-  "type": "module",
-  "dependencies": {
-    "@types/mutexify": "^1.2.4",
-    "async-mutex": "^0.5.0",
-    "async-sema": "^3.1.1",
-    "limit-concur": "^4.0.0",
-    "mutexify": "^1.4.0",
-    "p-limit": "^6.2.0"
-  }
+  "type": "module"
 }
